src/test/deca/context/invalid/invalid_essentiel/decl_class_2.deca
// Description:
//    Programme de test de declaration incorrecte de classes.
//}

class A extends int {}
